tests/ui/feature-gates/feature-gate-log_syntax.rs
fn main() {
    log_syntax!() //~ ERROR `log_syntax!` is not stable enough
}
